# eyeballvul_experiments

./: .flake8  README.md  pyproject.toml
data/attempts/: ddfa6acd0bddbb4befa0.json
data/cache/: cache.json
data/chunks/: be9ced72cffdaf7adcca.json
data/human_baselines/: llm_scores_245ace12b6361954d0a2_claude-3-5-sonnet-20240620.json  random_cve_stats.json  random_cves.json  random_cves_scored.json  sample.json  sample_for_humans.json  score_a.json  score_b.json  score_c.json
data/results/: average_chunks_by_model.json  cohen_kappa.json  confidence.json  cve_severities.json  fraction_of_benchmark_after_knowledge_cutoffs.json  fraction_of_benchmark_after_knowledge_cutoffs_by_context_window.json  fraction_of_benchmark_covered_by_context_window.json  intra_human_cohen_kappa.json  overall_performance.json  performance_before_after_training_cutoff.json  vulns_and_revisions.json
eyeballvul_experiments/: __main__.py  attempt.py  chunk.py  eyeballvul_stats.py  human_baselines.py  lead.py  results.py  score.py  util.py
eyeballvul_experiments/config/: config.toml  config_loader.py  cwe_list.txt  instruction_template.txt
eyeballvul_experiments/llm_gateway/: gateway_interface.py  litellm_gateway.py
