[tool.poetry]
name = "eyeballvul-experiments"
version = "0.1.0"
description = ""
authors = ["Timothee Chauvin <timothee.chauvin28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
eyeballvul = "^0.3.0"
litellm = "^1.38.0"
typeguard = "^4.2.1"
tomli = "^2.0.1"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
pandas = "^2.2.2"
types-seaborn = "^0.13.2.20240417"
plotly = "^5.22.0"
kaleido = "0.2.1"


[tool.poetry.group.dev.dependencies]
mypy = {extras = ["types-all"], version = "^1.10.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.docformatter]
wrap-summaries = 100
wrap-descriptions = 100
pre-summary-newline = true

[tool.mypy]
check_untyped_defs = true
