[tool.poetry]
name = "eyeballvul-experiments"
version = "0.1.0"
description = ""
authors = ["Timothee Chauvin <timothee.chauvin28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
eyeballvul = { path = "../eyeballvul", develop = true }
litellm = "^1.38.0"
typeguard = "^4.2.1"
tomli = "^2.0.1"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
pandas = "^2.2.2"
types-seaborn = "^0.13.2.20240417"
plotly = "^5.22.0"
kaleido = "0.2.1"
types-pyyaml = "^6.0.12.20240311"
google-generativeai = "^0.6.0"
statsmodels = "^0.14.2"
confidenceinterval = "^1.0.4"


[tool.poetry.group.dev.dependencies]
mypy = { extras = ["types-all"], version = "^1.10.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.docformatter]
wrap-summaries = 100
wrap-descriptions = 100
pre-summary-newline = true

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = """\
  litellm.*,\
  plotly.*,\
  statsmodels.*,\
"""
ignore_missing_imports = true

[tool.bandit]
skips = [
  "B404", # Consider possible security implications associated with the subprocess module
  "B603", # subprocess_without_shell_equals_true: subprocess call - check for execution of untrusted input
  "B607", # Starting a process with a partial executable path
]
